Updated app image

--- a/charts/my-app/templates/pyms-scaffold-k8s.yaml
+++ b/charts/my-app/templates/pyms-scaffold-k8s.yaml
@@ -14,7 +14,7 @@ spec:
     spec:
       containers:
       - name: pyms-scaffold
-        image: pyms-scaffold-app
+        image: pyms_scaffold_image
         imagePullPolicy: Never
         ports:
         - containerPort: 5000
