--- a/charts/my-app/templates/pyms-scaffold-k8s.yaml
+++ b/charts/my-app/templates/pyms-scaffold-k8s.yaml
@@ -33,43 +33,17 @@ spec:
           httpGet:
             path: /healthz/ready
             port: 5000
----
+        env:
+          - name: PYMS_CONFIGMAP_FILE
+            value: "/usr/share/microservice/config.yaml"
+        volumeMounts:
+          - mountPath: /usr/share/microservice
+            name: ms-config-volume
+      volumes:
+        - name: ms-config-volume
+          configMap:
+            name: pyms-configmap
 
-#apiVersion: apps/v1
-#kind: Deployment
-#metadata:
-#  name: pyms-scaffold-v2
-#spec:
-#  replicas: 0
-#  selector:
-#    matchLabels:
-#      app: scaffold-v2
-#  template:
-#    metadata:
-#      labels:
-#        app: scaffold-v2
-#    spec:
-#      containers:
-#      - name: pyms-scaffold
-#        image: pyms-scaffold_app
-#        imagePullPolicy: Never
-#        ports:
-#        - containerPort: 5000
-#        resources:
-#          requests:
-#            memory: "64Mi"
-#            cpu: "200m"
-#          limits:
-#            memory: "128Mi"
-#            cpu: "500m"
-#        livenessProbe:
-#          httpGet:
-#            path: /healthz/live
-#            port: 5000
-#        readinessProbe:
-#          httpGet:
-#            path: /healthz/ready
-#            port: 5000
 ---
 
 kind: Service
@@ -85,16 +59,29 @@ spec:
     port: 5003
     name: http-web
     targetPort: 5000
----
 
-#kind: Service
-#apiVersion: v1
-#metadata:
-#  name: pyms-scaffold-v2-svc
-#spec:
-#  selector:
-#    app: scaffold-v2
-#  ports:
-#  - protocol: TCP
-#    port: 5003
-#    targetPort: 5000
+---
+apiVersion: v1
+kind: ConfigMap
+metadata:
+  name: pyms-configmap
+data:
+  # When the config map is mounted as a volume, these will be created as files.
+  config.yaml: |-
+    pyms:
+      services:
+        metrics: true
+        swagger:
+          path: "project/swagger"
+          file: "swagger.yaml"
+          url: "/ui/"
+          project_dir: "project.views"
+      config:
+        DEBUG: true
+        TESTING: true
+        APP_NAME: pyms-app
+        APPLICATION_ROOT : /
+        SQLALCHEMY_TRACK_MODIFICATIONS: true
+        SECRET_KEY: "gjr39dkjn344_!67#"
+        DATABASE: db.sqlite3
+        SQLALCHEMY_DATABASE_URI: sqlite:///db.sqlite3
