--- a/charts/my-app/templates/pyms-scaffold-k8s.yaml
+++ b/charts/my-app/templates/pyms-scaffold-k8s.yaml
@@ -3,7 +3,7 @@ kind: Deployment
 metadata:
   name: pyms-scaffold-v1
 spec:
-  replicas: 1
+  replicas: {{ .Values.replicaCount }}
   selector:
     matchLabels:
       app: scaffold-v1
@@ -14,8 +14,8 @@ spec:
     spec:
       containers:
       - name: pyms-scaffold
-        image: pyms_scaffold_image
-        imagePullPolicy: Never
+        image: {{ .Values.image.repository }}
+        imagePullPolicy: {{ .Values.image.pullPolicy }}
         ports:
         - containerPort: 5000
         resources:
@@ -51,14 +51,13 @@ apiVersion: v1
 metadata:
   name: pyms-scaffold-v1-svc
 spec:
-  type: ClusterIP
+  type: {{ .Values.service.type }}
   selector:
     app: scaffold-v1
   ports:
   - protocol: TCP
-    port: 5003
+    port: {{ .Values.service.port }}
     name: http-web
-    targetPort: 5000
 
 ---
 apiVersion: v1
