fix: PYMS to pull image from remote repo

--- a/charts/my-app/values.yaml
+++ b/charts/my-app/values.yaml
@@ -5,7 +5,7 @@
 replicaCount: 1
 
 image:
-  repository: pyms_scaffold_image
+  repository: app_pyms_scaffold_app
   pullPolicy: Never
   # Overrides the image tag whose default is the chart appVersion.
   tag: ""
