--- a/charts/pyms-app/templates/deployment.yaml
+++ b/charts/pyms-app/templates/deployment.yaml
@@ -26,7 +26,7 @@ spec:
       imagePullSecrets:
         {{- toYaml . | nindent 8 }}
       {{- end }}
-      serviceAccountName: {{ include "pyms-app.serviceAccountName" . }}
+      #serviceAccountName: {{ include "pyms-app.serviceAccountName" . }}
       securityContext:
         {{- toYaml .Values.podSecurityContext | nindent 8 }}
       containers:
