fix: update Istio Gateway routing

--- a/charts/istio-ingress/templates/pyms-scaffold-istio-gateway.yaml
+++ b/charts/istio-ingress/templates/pyms-scaffold-istio-gateway.yaml
@@ -28,6 +28,6 @@ spec:
         prefix: /
     route:
     - destination:
-        host: pyms-scaffold-v1-svc
+        host: pyms-pyms-app
         port:
           number: {{ .Values.virtualService.port }}
