--- a/charts/pyms-app/templates/configmap.yaml
+++ b/charts/pyms-app/templates/configmap.yaml
@@ -21,4 +21,4 @@ data:
         SQLALCHEMY_TRACK_MODIFICATIONS: true
         SECRET_KEY: "gjr39dkjn344_!67#"
         DATABASE: db.sqlite3
-        SQLALCHEMY_DATABASE_URI: sqlite:///db.sqlite3
+        SQLALCHEMY_DATABASE_URI: postgresql+psycopg2://allocation:abc123@postgres:5432/postgres
