--- a/charts/pyms-app/values.yaml
+++ b/charts/pyms-app/values.yaml
@@ -102,4 +102,4 @@ configMap:
         SQLALCHEMY_TRACK_MODIFICATIONS: true
         SECRET_KEY: "gjr39dkjn344_!67#"
         DATABASE: db.sqlite3
-        SQLALCHEMY_DATABASE_URI: {{ .Values.myDb }}
+        SQLALCHEMY_DATABASE_URI: asd
