--- a/charts/pyms-app/values.yaml
+++ b/charts/pyms-app/values.yaml
@@ -82,7 +82,7 @@ tolerations: []
 
 affinity: {}
 
-myDb: sqlite:///db.sqlite3
+#myDb: sqlite:///db.sqlite3
 
 configMap:
    configValue: |-
@@ -102,4 +102,4 @@ configMap:
         SQLALCHEMY_TRACK_MODIFICATIONS: true
         SECRET_KEY: "gjr39dkjn344_!67#"
         DATABASE: db.sqlite3
-        SQLALCHEMY_DATABASE_URI: asd
+        SQLALCHEMY_DATABASE_URI: sqlite:///db.sqlite3
