--- a/charts/pyms-app/values.yaml
+++ b/charts/pyms-app/values.yaml
@@ -84,22 +84,24 @@ affinity: {}
 
 #myDb: sqlite:///db.sqlite3
 
+# pyms:
+#       services:
+#         metrics: true
+#         swagger:
+#           path: "project/swagger"
+#           file: "swagger.yaml"
+#           url: "/ui/"
+#           project_dir: "project.views"
+#       config:
+#         DEBUG: false
+#         TESTING: false
+#         APP_NAME: pyms-app
+#         APPLICATION_ROOT : /
+#         SQLALCHEMY_TRACK_MODIFICATIONS: true
+#         SECRET_KEY: "gjr39dkjn344_!67#"
+#         DATABASE: db.sqlite3
+#         SQLALCHEMY_DATABASE_URI: sqlite:///db.sqlite3
+
 configMap:
-   configValue: |-
-    pyms:
-      services:
-        metrics: true
-        swagger:
-          path: "project/swagger"
-          file: "swagger.yaml"
-          url: "/ui/"
-          project_dir: "project.views"
-      config:
-        DEBUG: false
-        TESTING: false
-        APP_NAME: pyms-app
-        APPLICATION_ROOT : /
-        SQLALCHEMY_TRACK_MODIFICATIONS: true
-        SECRET_KEY: "gjr39dkjn344_!67#"
-        DATABASE: db.sqlite3
-        SQLALCHEMY_DATABASE_URI: sqlite:///db.sqlite3
+   configValue: {"pyms":{"services":{"requests":true,"swagger":{"path":"","file":"swagger.yaml"}},"config":{"DEBUG":true,"TESTING":true,"APP_NAME":"Python Microservice","APPLICATION_ROOT":"/","DATABASE":"db.sqlite3","SQLALCHEMY_DATABASE_URI":"sqlite:///db.sqlite3"}}}
+    
