fix: updated db config

--- a/charts/pyms-app/templates/deployment.yaml
+++ b/charts/pyms-app/templates/deployment.yaml
@@ -47,7 +47,7 @@ spec:
             port: 5000
         env:
           - name: PYMS_CONFIGMAP_FILE
-            value: "/usr/share/microservice/config.yaml"
+            value: "/usr/share/microservice/config.json"
         volumeMounts:
           - mountPath: /usr/share/microservice
             name: ms-config-volume
