--- a/charts/pyms-app/values.yaml
+++ b/charts/pyms-app/values.yaml
@@ -82,7 +82,7 @@ tolerations: []
 
 affinity: {}
 
-#myDb: sqlite:///db.sqlite3
+myDb: sqlite:///db.sqlite3
 
 # pyms:
 #       services:
@@ -103,5 +103,4 @@ affinity: {}
 #         SQLALCHEMY_DATABASE_URI: sqlite:///db.sqlite3
 
 configMap:
-   configValue: {"pyms":{"services":{"requests":true,"swagger":{"path":"project/swagger","file":"swagger.yaml","url":"/ui/","project_dir":"project.views"}},"config":{"DEBUG":true,"TESTING":true,"APP_NAME":"Python Microservice","APPLICATION_ROOT":"/","DATABASE":"db.sqlite3","SQLALCHEMY_DATABASE_URI":"sqlite:///db.sqlite3"}}}
-    
+   configValue: {"pyms":{"services":{"requests":true,"swagger":{"path":"project/swagger","file":"swagger.yaml","url":"/ui/","project_dir":"project.views"}},"config":{"DEBUG":true,"TESTING":true,"APP_NAME":"Python Microservice","APPLICATION_ROOT":"/","DATABASE":"db.sqlite3","SQLALCHEMY_TRACK_MODIFICATIONS":"true","SQLALCHEMY_DATABASE_URI":{{ .Values.myDb }}}}}
