--- a/charts/pyms-app/values.yaml
+++ b/charts/pyms-app/values.yaml
@@ -80,6 +80,6 @@ nodeSelector: {}
 tolerations: []
 
 affinity: {}
-
+  #'{"pyms":{"services":{"requests":true,"swagger":{"path":"","file":"swagger.yaml"}},"config":{"DEBUG":true,"TESTING":true,"APP_NAME":"Python Microservice","APPLICATION_ROOT":"/","DATABASE":"db.sqlite3","SQLALCHEMY_DATABASE_URI":"sqlite:///db.sqlite3"}}}'
 configMap:
-  configValue: '{"pyms":{"services":{"swagger":{"path":"project/swagger","file":"swagger.yaml","url":"/ui/","project_dir":"project.views"}},"config":{"DEBUG":true,"TESTING":true,"APP_NAME":"pyms-app","APPLICATION_ROOT":"/","DATABASE":"db.sqlite3","SQLALCHEMY_TRACK_MODIFICATIONS":"true","SQLALCHEMY_DATABASE_URI":"sqlite:///project/db.sqlite3"}}}'
+  configValue: {"pyms":{"services":{"swagger":{"path":"project/swagger","file":"swagger.yaml","url":"/ui/","project_dir":"project.views"}},"config":{"DEBUG":true,"TESTING":true,"APP_NAME":"pyms-app","APPLICATION_ROOT":"/","DATABASE":"db.sqlite3","SQLALCHEMY_TRACK_MODIFICATIONS":"true","SQLALCHEMY_DATABASE_URI":"sqlite:///project/db.sqlite3"}}}
